projects/compiler/test/typechecker/try/error_return_type_err_mismatch.abra
func foo(): Result<Int, String> = Ok(123)

func bar(): Result<Int, Int> {
  val x = try foo()
  Ok(x + 1)
}